			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

24-Mar-2004
~~~~~~~~~~~
Fix memory leak in thumbnails code (Stephen Watson).

20-Mar-2004
~~~~~~~~~~~
Fixed bug in details mode for showing hidden files (Stephen Watson).

18-Mar-2004
~~~~~~~~~~~
Don't display an error box when installing the ROX icon theme. It just
worries people for no reason.

17-Mar-2004
~~~~~~~~~~~
Updated Chinese translation (Babyfai Cheung).

16-Mar-2004
~~~~~~~~~~~
Option to make the File menu appear directly when the menu is opened with
files selected (Peter Geer).

15-Mar-2004
~~~~~~~~~~~
Added an arrow to the comparison area of the action box so you can see
which file overwrites the other (Stephen Watson).

10-Mar-2004
~~~~~~~~~~~
Sort by user/group now uses the name, not the number (Stephen Watson).

07-Mar-2004
~~~~~~~~~~~
Added 'Select by Name'.

06-Mar-2004
~~~~~~~~~~~
Cope with XRandR screen resizing (Geoff Youngs and Tom Morton).

01-Mar-2004
~~~~~~~~~~~
Can now filter files by name, using normal shell (glob) patterns (Stephen 
Watson).

03-Feb-2004
~~~~~~~~~~~
Updated it.po and Manual-it (Yuri Bongiorno).

01-Feb-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

24-Jan-2004 (Release 2.1.1)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Updated Dutch translation (Jan Wagemakers).

22-Jan-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

21-Jan-2004
~~~~~~~~~~~
Misc changes for next release.

18-Jan-2004
~~~~~~~~~~~
Accept Mozilla's alternative to the standard text/uri-list target during
drag-and-drop (Andrew Flegg).

07-Jan-2004
~~~~~~~~~~~
Bugfix: Icon shortcuts with out modifier keys didn't work if NumLock,
	CapsLock, etc were turned on (reported by Peter Geer).
Bugfix: Handle case when the output of uname -m contains spaces (Stephen 
	Watson, reported on #rox).

06-Jan-2004
~~~~~~~~~~~
Renamed some functions stolen from Gtk to avoid possible conflicts with
the Gtk-2.3 series (reported by Stu Tissimus).

20-Dec-2003