@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+25-Mar-2004
+~~~~~~~~~~~
+Bookmarks can be given titles (Stephen Watson).
+
 24-Mar-2004
 ~~~~~~~~~~~
 Fix memory leak in thumbnails code (Stephen Watson).
